# Building-Programming-Language-Interpreters

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  code_generation.md  tsan_suppressions.txt
.github/workflows/: c-cpp.yml
examples/: CMakeLists.txt
examples/smtpserver/: CMakeLists.txt  generate_string_literals.cmake  interpreted_program.cpp  interpreted_program.hpp  main.cpp  server_core.cpp  server_core.hpp  server_processor.cpp  server_processor.hpp  smtp.networkprotocoldsl
examples/smtpserver_generated/: CMakeLists.txt  main.cpp  smtp_handler.cpp  smtp_handler.hpp
notes/: grammar.txt  lexing-rules.txt  operations-read-http-message.txt  operations-read-http-request.txt  operations-read-http-response.txt  operations-write-http-message.txt  operations-write-http-requets.txt  operations-write-http-response.txt  source-code-http-client-server.txt
scripts/: debug_race.py
src/networkprotocoldsl/: continuation.cpp  continuation.hpp  entrypoint.cpp  entrypoint.hpp  executionstackframe.cpp  executionstackframe.hpp  generate.cpp  generate.hpp  interpretedprogram.cpp  interpretedprogram.hpp  interpreter.cpp  interpreter.hpp  interpretercollection.cpp  interpretercollection.hpp  interpretercollectionmanager.cpp  interpretercollectionmanager.hpp  interpretercontext.cpp  interpretercontext.hpp  interpreterrunner.cpp  interpreterrunner.hpp  lexicalpad.cpp  lexicalpad.hpp  operation.cpp  operation.hpp  operationconcepts.cpp  operationconcepts.hpp  optree.cpp  optree.hpp  print_optreenode.cpp  print_optreenode.hpp  value.cpp  value.hpp
src/networkprotocoldsl/codegen/: cppgenerator.cpp  cppgenerator.hpp  generate_data_types.cpp  generate_data_types.hpp  generate_parser.cpp  generate_parser.hpp  generate_runner.cpp  generate_runner.hpp  generate_serializer.cpp  generate_serializer.hpp  generate_state_machine.cpp  generate_state_machine.hpp  generate_states.cpp  generate_states.hpp  outputcontext.cpp  outputcontext.hpp  protocol_generator.cpp  protocolinfo.cpp  protocolinfo.hpp  typemapping.cpp  typemapping.hpp
src/networkprotocoldsl/lexer/: token.cpp  token.hpp  tokenize.cpp  tokenize.hpp
src/networkprotocoldsl/lexer/token/: identifier.cpp  identifier.hpp  keyword.cpp  keyword.hpp  literal.cpp  literal.hpp  punctuation.cpp  punctuation.hpp
src/networkprotocoldsl/operation/: add.cpp  add.hpp  dictionaryget.cpp  dictionaryget.hpp  dictionaryinitialize.cpp  dictionaryinitialize.hpp  dictionaryset.cpp  dictionaryset.hpp  dynamiclist.cpp  dynamiclist.hpp  eq.cpp  eq.hpp  functioncall.cpp  functioncall.hpp  functioncallforeach.cpp  functioncallforeach.hpp  generatelist.cpp  generatelist.hpp  if.cpp  if.hpp  int32literal.cpp  int32literal.hpp  inttoascii.cpp  inttoascii.hpp  lesserequal.cpp  lesserequal.hpp  lexicalpadasdict.cpp  lexicalpadasdict.hpp  lexicalpadget.cpp  lexicalpadget.hpp  lexicalpadinitialize.cpp  lexicalpadinitialize.hpp  lexicalpadinitializeglobal.cpp  lexicalpadinitializeglobal.hpp  lexicalpadset.cpp  lexicalpadset.hpp  multiply.cpp  multiply.hpp  opsequence.cpp  opsequence.hpp  (+28 more)
src/networkprotocoldsl/parser/: booleanliteral.cpp  booleanliteral.hpp  identifierreference.cpp  identifierreference.hpp  integerliteral.cpp  integerliteral.hpp  message.cpp  message.hpp  messagedata.cpp  messagedata.hpp  messageforloop.cpp  messageforloop.hpp  messagepart.cpp  messagepart.hpp  messagesequence.hpp  parse.cpp  parse.hpp  protocoldescription.cpp  protocoldescription.hpp  stringliteral.cpp  stringliteral.hpp  terminator.cpp  terminator.hpp  tokenpart.cpp  tokenpart.hpp  tokensequence.cpp  tokensequence.hpp  type.cpp  type.hpp  typeparametermap.cpp  typeparametermap.hpp  typeparametervalue.cpp  typeparametervalue.hpp
src/networkprotocoldsl/parser/grammar/: identifier.cpp  identifier.hpp  (+16 more)
src/networkprotocoldsl/sema/: analyze.cpp  analyze.hpp  partstoreadactions.cpp  partstoreadactions.hpp  partstowriteactions.cpp  partstowriteactions.hpp  support.cpp  support.hpp
src/networkprotocoldsl/support/: mutexlockqueue.cpp  mutexlockqueue.hpp  notificationsignal.cpp  notificationsignal.hpp  transactionalcontainer.cpp  transactionalcontainer.hpp
src/networkprotocoldsl_uv/: asyncworkqueue.cpp  asyncworkqueue.hpp  generatedserverwrapper.cpp  generatedserverwrapper.hpp  libuvclientrunner.cpp  libuvclientrunner.hpp  libuvclientwrapper.cpp  libuvclientwrapper.hpp  libuvserverrunner.cpp  libuvserverrunner.hpp  libuvserverwrapper.cpp  libuvserverwrapper.hpp
tests/: 001-empty.cpp  002-interpreter-state.cpp  003-literal-and-add-operations.cpp  004-interpreter-global-state.cpp  005-operator-eq.cpp  006-operator-if.cpp  007-opsequence.cpp  008-lexicalpad.cpp  009-recursive-factorial.cpp  010-read-write-static-octets.cpp  011-write-inttoascii.cpp  012-read-int-and-terminator.cpp  013-parse-and-write-http-message.cpp  014-using-with-libuv.cpp  015-test-tokenizer.cpp  016-grammar-literals.cpp  017-grammar-identifier.cpp  018-grammar-typeparameter.cpp  019-grammar-message-data.cpp  020-grammar-tokenpart.cpp  021-grammar-messagesequence.cpp  022-grammar-message.cpp  023-grammar-complete.cpp  024-sema-analyze.cpp  025-transitionlookahead.cpp  026-statemachineoperator.cpp  027-translate-ast-to-optree.cpp  028-libuv-io-runner.cpp  029-codegen-outputcontext.cpp  030-codegen-typemapping.cpp  031-codegen-protocolinfo.cpp  032-codegen-generate-data-types.cpp  033-codegen-generate-states.cpp  034-codegen-generate-parser.cpp  035-codegen-generate-serializer.cpp  036-codegen-generate-state-machine.cpp  037-codegen-compile-smtp.cpp  038-codegen-integration-test.cpp  038-escape-replacement-operations.cpp  039-codegen-escape-replacement.cpp  (+1 more)
tests/codegen_integration/: CMakeLists.txt  test_ehlo_parse.cpp  test_full_email_transaction.cpp  test_greeting.cpp  test_multi_connection.cpp  test_partial.cpp  test_protocol_mismatch.cpp  test_roundtrip.cpp  test_uv_adapter.cpp
tests/data/: 002-empty-program.networkprotocoldsl  023-source-code-http-client-server.txt  038-http-with-continuation.txt
tests/data/codegen/: test_conversation.cpp
tests/testlibs/: http_message_optrees.cpp  http_message_optrees.hpp
(+51 files in other folders)
